<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.harneet.meminder.Login">


    <ImageView
        android:id="@+id/imageButton"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/login_image"
        android:src="@drawable/background_login" />

    <!-- User Name -->
    <TextView
        android:id="@+id/userNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="10dp"
        android:text="@string/user_name_label"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/userNameEditLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userNameLabel"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/userNameLabel"
        android:layout_toEndOf="@+id/userNameLabel"
        android:ems="8"
        android:inputType="text"
        android:text="@string/user_name"
        android:textColor="@android:color/black"
        android:textSize="20sp">
        <requestFocus />

    </EditText>

    <!-- Password -->
    <TextView
        android:id="@+id/passwordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/userNameLabel"
        android:layout_alignStart="@+id/userNameLabel"
        android:layout_below="@+id/userNameLabel"
        android:padding="10dp"
        android:text="@string/password_label"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/passwordLabel"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toRightOf="@+id/passwordLabel"
        android:layout_toEndOf="@+id/passwordLabel"
        android:ems="8"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="@android:color/black"
        android:textSize="20sp">
        <requestFocus />
    </EditText>

    <!-- Login in Button if account already exists -->
    <Button
        android:id="@+id/logInButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/login"
        android:textSize="20sp" />

    <!-- Button for creating a new account -->
    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:text="@string/create_account"
        android:textSize="20sp"
        android:layout_below="@+id/logInButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="7dp" />
</RelativeLayout>
